--- a/ProyectoCaC/pages/descuentos.html
+++ b/ProyectoCaC/pages/descuentos.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Pedidos Farmacia Plaza la Carolina</title>
+  <title>Descuentos Farmacia Plaza la Carolina</title>
   <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -14,34 +14,33 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
-  <div class=" container-fluid">
-    <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online<img
-              src="../img/carritocompra.png"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../pages/llegar.html">Cómo llegar<img src="../img/direccion.png"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../pages/descuentos.html">Descuentos Exclusivos<img src="../img/banco.png"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="../pages/api.html">Contactanos<img
-              src="../img/contacto.png"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">X</a>
-        </li>
-      </ul>
-    </div>
+  <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"">
+    <div class=" container-fluid">
+  <a class="navbar-brand" href="../index.html"><img src="../img/home.png"></a>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="../pages/pedidos.html">Pedidos Online<img
+            src="../img/carritocompra.png"></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="../pages/llegar.html">Cómo llegar<img src="../img/direccion.png"></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="../pages/descuentos.html">Descuentos Exclusivos<img src="../img/banco.png"></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" aria-current="page" href="../pages/api.html">Contactanos<img src="../img/contacto.png"></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" aria-disabled="true">X</a>
+      </li>
+    </ul>
+  </div>
   </div>
 </nav>
 <header>
