--- a/ProyectoCaC/index.html
+++ b/ProyectoCaC/index.html
@@ -95,9 +95,10 @@
   <footer>
     <p>© Copyright 2023</p>
     <p>C. 1148 2440, B1891 Ingeniero Juan Allan, Provincia de Buenos Aires</p>
+    <p>Horarios de atencion: Lunes a Viernes de 8:00 a 12:30 y 16:30 a 20:00 hs. Sábados 9:00 a 12:30 y 16:30 a 20:00 hs</p>
     <p>Tel:(02229)493789 email: fcialaplaza@c3l.com.ar
       <a class="redsoc" href="https://wa.me/541154110787" target="_blank"><img
-          src="../ProyectoCaC/img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487
+          src="../ProyectoCaC/img/whatsapp-line.png" class="fa-brands fa-whatsapp fa-sm"></i>Whatsapp:1154110487</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
